feat(workflow): implement delete, duplicate, and renaming on backend & frontend
